--- a/views/events.html
+++ b/views/events.html
@@ -57,13 +57,34 @@
             <button id="registered-events-btn">View Registered Events</button>
             <button id="logout">Logout</button>
         </div>
+        <button id="admin-panel" style="display: block;">Go To Admin Panel</button>
         <script>
             const token = localStorage.getItem("token");
+
+            const checkAdmin = async () => {
+                try{
+                    const res = await fetch("/check-admin", {
+                        headers : {"Authorization" : `Bearer ${token}`},
+                    });
+                    const data = await res.json();
+                    if (res.ok && data.isAdmin){
+                        document.getElementById("admin-panel").style.display = "block";
+                    }
+                    } catch(err){
+                        console.error("Error checking admin status: ",err)
+                    }
+            };
+
+            checkAdmin();
+            
+            document.getElementById("admin-panel").addEventListener("click", () => {
+                window.location.href = "/admin.html";  
+            });
 
             const fetchEvents = async () => {
                 try{
                     const res = await fetch("/view-events", {
-                        headers : {"Authorization" : "Bearer ${token}"},
+                        headers : {"Authorization" : `Bearer ${token}`},
                     });
                     const events = await res.json();
                     if (res.ok){
@@ -104,11 +125,11 @@
                         method : "POST",
                         headers : {
                             "Content-type" : "application/json",
-                            "Authorization" : "Bearer ${token}"
+                            "Authorization" : `Bearer ${token}`,
                         },
                         body : JSON.stringify({eventID : eventId}),
                     });
-                    const data = res.json();
+                    const data = await res.json();
                     if (res.ok){
                         alert("Registered successfully. ");
                     } else{
