--- a/views/registered-events.html
+++ b/views/registered-events.html
@@ -124,11 +124,11 @@
 
             document.getElementById("logout").addEventListener("click", () => {
                 localStorage.removeItem("token");
-                window.location.href = "/views/index.html";
+                window.location.href = "/index.html";
             });
 
             document.getElementById("back").addEventListener("click", () => {
-                window.location.href = "/views/events.html";
+                window.location.href = "/events.html";
             });
 
             fetchRegisteredEvents();
